--- a/app/globals.css
+++ b/app/globals.css
@@ -222,3 +222,10 @@ input:-webkit-autofill:active{
         background-position:0%; 
   }
 }
+
+
+.soft-shadow {
+
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.03), 0px 23px 51px 0px rgba(0, 0, 0, 0.03), 0px 92px 92px 0px rgba(0, 0, 0, 0.03), 0px 207px 124px 0px rgba(0, 0, 0, 0.02), 0px 367px 147px 0px rgba(0, 0, 0, 0.00), 0px 574px 161px 0px rgba(0, 0, 0, 0.00);
+
+}
