fix: edit overlay layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,27 +15,26 @@
   }
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden !important;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: rgb(var(--background-rgb))
+  background: rgb(var(--background-rgb));
 }
 
-
 .jc {
-  @apply justify-center
+  @apply justify-center;
 }
 
 .jb {
-  @apply justify-between
+  @apply justify-between;
 }
 
-
 .ic {
-  @apply items-center
+  @apply items-center;
 }
 
 .navigation li {
@@ -43,7 +42,7 @@ body {
   align-items: center;
   cursor: pointer;
   height: 100%;
-  transition:all .1s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 
 .navigation li.active {
@@ -55,147 +54,277 @@ body {
   border-top: none;
 }
 
-
-
 .navigation li:hover {
   color: #111;
   border-top: 3px solid black;
 }
 
-
 .visuallyHidden {
-  position: absolute; 
-  overflow: hidden; 
-  clip: rect(0 0 0 0); 
-  height: 1px; width: 1px; 
-  margin: -1px; padding: 0; border: 0; 
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
 }
 
 .no-scroll::-webkit-scrollbar {
   display: none;
 }
-.no-scroll{
+.no-scroll {
   scrollbar-width: none;
 }
-.bordered{
-  border: 1px solid #E6E6E6;
+.bordered {
+  border: 1px solid #e6e6e6;
 }
-.contact{
+.contact {
   display: hidden;
 }
-@media only screen and (min-width:900px){
-  .contact{
+@media only screen and (min-width: 900px) {
+  .contact {
     position: relative;
   }
-  .contact::before{
+  .contact::before {
     content: "";
     position: absolute;
     top: 450px;
-    width:830px;
+    width: 830px;
     height: 400px;
-    background-color:#FAFAFA;
+    background-color: #fafafa;
     z-index: -1;
     border-radius: 25px;
   }
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
-    -webkit-box-shadow: 0 0 0 30px #f2f2f2 inset !important;
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #f2f2f2 inset !important;
 }
-
 
 .btn-flashing-animation {
   border: 0;
   cursor: pointer;
-  background: -moz-linear-gradient(-45deg,  #011223 0%, #011223 40%, #ffffff 50%, #011223 60%, #011223 100%);
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#011223), color-stop(40%,#011223), color-stop(50%,#ffffff), color-stop(60%,#011223), color-stop(100%,#011223));
-  background: -webkit-linear-gradient(-45deg,  #011223 0%,#011223 40%,#ffffff 50%,#011223 60%,#011223 100%);
-  background: -o-linear-gradient(-45deg,  #011223 0%,#ff6e00 40%,#ffffff 50%,#011223 60%,#011223 100%);
-  background: -ms-linear-gradient(-45deg,  #011223 0%,#011223 40%,#ffffff 50%,#011223 60%,#011223 100%);
-  background: linear-gradient(135deg,  #011223 0%,#011223 40%,#ffffff 50%,#011223 60%,#011223 100%);
+  background: -moz-linear-gradient(
+    -45deg,
+    #011223 0%,
+    #011223 40%,
+    #ffffff 50%,
+    #011223 60%,
+    #011223 100%
+  );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    color-stop(0%, #011223),
+    color-stop(40%, #011223),
+    color-stop(50%, #ffffff),
+    color-stop(60%, #011223),
+    color-stop(100%, #011223)
+  );
+  background: -webkit-linear-gradient(
+    -45deg,
+    #011223 0%,
+    #011223 40%,
+    #ffffff 50%,
+    #011223 60%,
+    #011223 100%
+  );
+  background: -o-linear-gradient(
+    -45deg,
+    #011223 0%,
+    #ff6e00 40%,
+    #ffffff 50%,
+    #011223 60%,
+    #011223 100%
+  );
+  background: -ms-linear-gradient(
+    -45deg,
+    #011223 0%,
+    #011223 40%,
+    #ffffff 50%,
+    #011223 60%,
+    #011223 100%
+  );
+  background: linear-gradient(
+    135deg,
+    #011223 0%,
+    #011223 40%,
+    #ffffff 50%,
+    #011223 60%,
+    #011223 100%
+  );
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#011223', endColorstr='#011223',GradientType=1 );
-  background-repeat: no-repeat;  
-  background-position:0%;
-  background-size:300%; 
+  background-repeat: no-repeat;
+  background-position: 0%;
+  background-size: 300%;
 }
 .btn-flashing-animation {
-  animation:light 1s;
-    -webkit-animation:light 1s;
+  animation: light 1s;
+  -webkit-animation: light 1s;
 }
 
 .lablel-flashing-animation {
   border: 0;
   cursor: pointer;
-  background: -moz-linear-gradient(-45deg,  #0D4F94 0%, #0D4F94 40%, #ffffff 50%, #0D4F94 60%, #0D4F94 100%);
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#0D4F94), color-stop(40%,#0D4F94), color-stop(50%,#ffffff), color-stop(60%,#0D4F94), color-stop(100%,#0D4F94));
-  background: -webkit-linear-gradient(-45deg,  #0D4F94 0%,#0D4F94 40%,#ffffff 50%,#0D4F94 60%,#0D4F94 100%);
-  background: -o-linear-gradient(-45deg,  #0D4F94 0%,#1964b4 40%,#ffffff 50%,#0D4F94 60%,#0D4F94 100%);
-  background: -ms-linear-gradient(-45deg,  #0D4F94 0%,#0D4F94 40%,#ffffff 50%,#0D4F94 60%,#0D4F94 100%);
-  background: linear-gradient(135deg,  #0D4F94 0%,#0D4F94 40%,#ffffff 50%,#0D4F94 60%,#0D4F94 100%);
+  background: -moz-linear-gradient(
+    -45deg,
+    #0d4f94 0%,
+    #0d4f94 40%,
+    #ffffff 50%,
+    #0d4f94 60%,
+    #0d4f94 100%
+  );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    color-stop(0%, #0d4f94),
+    color-stop(40%, #0d4f94),
+    color-stop(50%, #ffffff),
+    color-stop(60%, #0d4f94),
+    color-stop(100%, #0d4f94)
+  );
+  background: -webkit-linear-gradient(
+    -45deg,
+    #0d4f94 0%,
+    #0d4f94 40%,
+    #ffffff 50%,
+    #0d4f94 60%,
+    #0d4f94 100%
+  );
+  background: -o-linear-gradient(
+    -45deg,
+    #0d4f94 0%,
+    #1964b4 40%,
+    #ffffff 50%,
+    #0d4f94 60%,
+    #0d4f94 100%
+  );
+  background: -ms-linear-gradient(
+    -45deg,
+    #0d4f94 0%,
+    #0d4f94 40%,
+    #ffffff 50%,
+    #0d4f94 60%,
+    #0d4f94 100%
+  );
+  background: linear-gradient(
+    135deg,
+    #0d4f94 0%,
+    #0d4f94 40%,
+    #ffffff 50%,
+    #0d4f94 60%,
+    #0d4f94 100%
+  );
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0D4F94', endColorstr='#0D4F94',GradientType=1 );
-  background-repeat: no-repeat;  
-  background-position:0%;
-  background-size:300%; 
+  background-repeat: no-repeat;
+  background-position: 0%;
+  background-size: 300%;
 }
 .lablel-flashing-animation {
-  animation:light 1s;
-    -webkit-animation:light 1s;
-    animation-delay: 3s;
+  animation: light 1s;
+  -webkit-animation: light 1s;
+  animation-delay: 3s;
 }
 
 .lablel-flashing-animation-hov {
   border: 0;
   cursor: pointer;
-  background: -moz-linear-gradient(-45deg,  #0D4F94 0%, #0D4F94 40%, #ffffff 50%, #0D4F94 60%, #0D4F94 100%);
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#0D4F94), color-stop(40%,#0D4F94), color-stop(50%,#ffffff), color-stop(60%,#0D4F94), color-stop(100%,#0D4F94));
-  background: -webkit-linear-gradient(-45deg,  #0D4F94 0%,#0D4F94 40%,#ffffff 50%,#0D4F94 60%,#0D4F94 100%);
-  background: -o-linear-gradient(-45deg,  #0D4F94 0%,#1964b4 40%,#ffffff 50%,#0D4F94 60%,#0D4F94 100%);
-  background: -ms-linear-gradient(-45deg,  #0D4F94 0%,#0D4F94 40%,#ffffff 50%,#0D4F94 60%,#0D4F94 100%);
-  background: linear-gradient(135deg,  #0D4F94 0%,#0D4F94 40%,#ffffff 50%,#0D4F94 60%,#0D4F94 100%);
+  background: -moz-linear-gradient(
+    -45deg,
+    #0d4f94 0%,
+    #0d4f94 40%,
+    #ffffff 50%,
+    #0d4f94 60%,
+    #0d4f94 100%
+  );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    color-stop(0%, #0d4f94),
+    color-stop(40%, #0d4f94),
+    color-stop(50%, #ffffff),
+    color-stop(60%, #0d4f94),
+    color-stop(100%, #0d4f94)
+  );
+  background: -webkit-linear-gradient(
+    -45deg,
+    #0d4f94 0%,
+    #0d4f94 40%,
+    #ffffff 50%,
+    #0d4f94 60%,
+    #0d4f94 100%
+  );
+  background: -o-linear-gradient(
+    -45deg,
+    #0d4f94 0%,
+    #1964b4 40%,
+    #ffffff 50%,
+    #0d4f94 60%,
+    #0d4f94 100%
+  );
+  background: -ms-linear-gradient(
+    -45deg,
+    #0d4f94 0%,
+    #0d4f94 40%,
+    #ffffff 50%,
+    #0d4f94 60%,
+    #0d4f94 100%
+  );
+  background: linear-gradient(
+    135deg,
+    #0d4f94 0%,
+    #0d4f94 40%,
+    #ffffff 50%,
+    #0d4f94 60%,
+    #0d4f94 100%
+  );
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0D4F94', endColorstr='#0D4F94',GradientType=1 );
-  background-repeat: no-repeat;  
-  background-position:0%;
-  background-size:300%; 
+  background-repeat: no-repeat;
+  background-position: 0%;
+  background-size: 300%;
 }
 .lablel-flashing-animation-hov {
-  animation:light 1s;
-    -webkit-animation:light 1s;
+  animation: light 1s;
+  -webkit-animation: light 1s;
 }
-
 
 @keyframes light {
   0% {
-        background-position: 100%; 
+    background-position: 100%;
   }
-  100% { 
-        background-position:0%; 
+  100% {
+    background-position: 0%;
   }
 }
-        
+
 @-webkit-keyframes light {
   0% {
-        background-position: 100%; 
+    background-position: 100%;
   }
-  100% { 
-        background-position:0%; 
+  100% {
+    background-position: 0%;
   }
 }
 
-
 .soft-shadow {
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.03), 0px 23px 51px 0px rgba(0, 0, 0, 0.03), 0px 92px 92px 0px rgba(0, 0, 0, 0.03), 0px 207px 124px 0px rgba(0, 0, 0, 0.02), 0px 367px 147px 0px rgba(0, 0, 0, 0.00), 0px 574px 161px 0px rgba(0, 0, 0, 0.00);
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.03),
+    0px 23px 51px 0px rgba(0, 0, 0, 0.03), 0px 92px 92px 0px rgba(0, 0, 0, 0.03),
+    0px 207px 124px 0px rgba(0, 0, 0, 0.02),
+    0px 367px 147px 0px rgba(0, 0, 0, 0), 0px 574px 161px 0px rgba(0, 0, 0, 0);
 }
 
 .faq-shadow {
   box-shadow: 0px 4px 59px 0px rgba(0, 0, 0, 0.05);
 }
 
-
 .bm-burger-button {
-  
   width: 36px;
   height: 30px;
   left: 36px;
@@ -205,11 +334,10 @@ input:-webkit-autofill:active{
 
 .bm-burger-bars {
   background: #373a47;
-}  
+}
 
 .bm-burger-bars-hover {
   background: #a90000;
-
 }
 
 .bm-cross-button {
@@ -237,7 +365,6 @@ input:-webkit-autofill:active{
 }
 
 .bm-item-list {
-
   color: #b8b7ad;
   padding: 0.8em;
 }
@@ -255,14 +382,15 @@ input:-webkit-autofill:active{
   flex-direction: column;
 }
 
-
-
 .visuallyHidden {
-  position: absolute; 
-  overflow: hidden; 
-  clip: rect(0 0 0 0); 
-  height: 1px; width: 1px; 
-  margin: -1px; padding: 0; border: 0; 
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
 }
 
 .hamburger {
@@ -281,12 +409,11 @@ input:-webkit-autofill:active{
   display: block;
   border-radius: 4px;
   transition: all 0.4s ease-in-out;
-  position: absolute; 
+  position: absolute;
 }
 
 .bar1 {
   top: 0;
-  
 }
 
 .bar2,
@@ -302,10 +429,10 @@ input:-webkit-autofill:active{
   bottom: 0;
 }
 
-.menu:checked + label > .hamburger-inner > .bar1{
+.menu:checked + label > .hamburger-inner > .bar1 {
   transform: rotate(45deg);
   transform-origin: 5%;
-  width: 41px
+  width: 41px;
 }
 
 .menu:checked + label > .hamburger-inner > .bar2 {
@@ -322,4 +449,22 @@ input:-webkit-autofill:active{
   transform-origin: 5%;
   transform: rotate(-45deg);
   width: 41px;
+}
+
+.bg-animate {
+  background-size: cover;
+  animation-name: heroanimation;
+  animation-delay: 2s;
+  animation-duration: 10s;
+  transition: all 1s ease-in-out;
+
+}
+
+@keyframes heroanimation {
+  0% {
+    background-size: cover;
+  }
+  100% {
+    background-size: 200%;
+  }
 }
