--- a/app/globals.css
+++ b/app/globals.css
@@ -459,72 +459,9 @@ input:-webkit-autofill:active {
     background-size: 200%;
   }
 }
-/* 
-.switch {
-  cursor: pointer;
-  margin: 150px auto 0;
-  display: block;
-  width: 30px;
-  height: 20px;
-  position: relative;
-  top: 0;
-  left: 0;
-  scale: 1.8;
-  background-color: #111;
-}
-.switch input {
-  display: none;
-}
-.switch input:checked ~ .switch__background {
-  background-position: 20% 0%;
-}
-.switch input:checked ~ .switch__background:before {
-  opacity: 0.9;
-}
-.switch input:checked ~ .switch__background:after {
-  transform: translateY(250%);
-  opacity: 0.5;
-}
-.switch input:checked ~ .switch__button {
-  left: calc(100% - 5px);
-  transform: translateX(-100%);
-  transition: 0.2s ease all;
-  box-shadow: inset 3px 5px 3px #edf1f9;
-  background: #c3c9d2;
-}
 
 
-.switch__button {
-  top: 5px;
-  left: 5px;
-  width: 10px;
-  height: 10px;
-  border-radius: 30px;
-  background: #f1c530;
-  position: absolute;
-  transition: 0.2s ease all;
-  box-shadow: inset 3px 5px 3px #f8a100;
-}
-.switch__background {
-  width: 100%;
-  height: 100%;
-  display: block;
-  z-index: -1;
-  background: grey;
-  border-radius: 40px;
-  position: relative;
-  box-shadow: inset -4px -4px 6px rgba(255, 255, 255, 0.3), inset 4px 4px 6px rgba(70, 70, 70, 0.12);
-  background: radial-gradient(circle at center right, #347ab2, #347ab2 10%, #4886b7 10%, #4886b7 20%, #5c93bf 20%, #5c93bf 30%, #699ec6 30%, #699ec6 40%, #494e5c 40%, #494e5c 50%, #404350 50%, #404350 60%, #2d333c 60%, #2d333c 70%, #242830 70%, #242830 80%, #111 80%, #111 90%);
-  background-size: 250% 100%;
-  background-position: 100% 0%;
-  transition: 0.2s ease all;
-  overflow: hidden;
-}
- */
-
-
-
-.App {
+.switch-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -532,23 +469,22 @@ input:-webkit-autofill:active {
   transition: 0.3s;
 }
 
-
-.Switch {
+.switch {
   display: flex;
   align-items: center;
 }
 
-.Switch:hover {
+.switch:hover {
   cursor: pointer;
 }
 
-.Switch__CheckBox {
+.switch__CheckBox {
   opacity: 0;
   width: 0px;
   height: 0px;
 }
 
-.Switch__Slider {
+.switch__Slider {
   width: 4rem;
   height: 2rem;
   border-radius: 1rem;
@@ -556,22 +492,22 @@ input:-webkit-autofill:active {
   padding: 0.2rem;
   display: flex;
   align-items: center;
-  background: #F2F2F2;
+  background: #f2f2f2;
   transition: 0.3s;
 }
 
-input:checked ~ .Switch__Slider {
+input:checked ~ .switch__Slider {
   background: #050218;
   transition: 0.3s;
 }
 
-.Switch__SliderDot {
+.switch__SliderDot {
   width: 1.6rem;
   height: 1.6rem;
   border-radius: 50%;
 }
 
-.Switch__SliderDot {
+.switch__SliderDot {
   background-color: black; /* fallback color */
   background: url(https://images.unsplash.com/photo-1614730321146-b6fa6a46bcb4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80);
   background-size: 230%;
@@ -581,7 +517,7 @@ input:checked ~ .Switch__Slider {
   box-shadow: 0 0.4rem 1rem 0 #225a6b76;
 }
 
-input:checked ~ .Switch__Slider .Switch__SliderDot {
+input:checked ~ .switch__Slider .switch__SliderDot {
   background-color: gray; /* fallback color */
   background: url(https://media.istockphoto.com/photos/full-moon-close-up-picture-id490137064?b=1&k=20&m=490137064&s=170667a&w=0&h=I6OMlQb6RNExRjN75j-m755SGLnpjWpAKXxc6oRAN14=);
   background-size: 250%;
@@ -591,24 +527,24 @@ input:checked ~ .Switch__Slider .Switch__SliderDot {
   box-shadow: 0 -0.4rem 1rem 0 #111;
 }
 
-.Switch__Label {
+.switch__Label {
   font-size: 0.8rem;
   transform: scaleY(0.7);
 }
 
-.Switch__Label--Day {
+.switch__Label--Day {
   color: #3f3e40;
 }
 
-.Switch__Label--Night {
+.switch__Label--Night {
   color: #a1d7e8;
 }
 
-input:checked ~ .Switch__Label--Day {
+input:checked ~ .switch__Label--Day {
   color: #79787a;
 }
 
-input:checked ~ .Switch__Label--Night {
+input:checked ~ .switch__Label--Night {
   color: #88d7f1;
   text-shadow: 0 0 1rem #88d7f1;
 }
@@ -618,10 +554,19 @@ input:checked ~ .Switch__Label--Night {
 }
 
 @keyframes wiggle {
-  0% { transform: none; }
-  25% { transform: translateX(0.05rem); }
-  50% { transform: translateX(-0.05rem); }
-  75% { transform: translateX(0.025rem); }
-  100% { transform: none; }
+  0% {
+    transform: none;
+  }
+  25% {
+    transform: translateX(0.05rem);
+  }
+  50% {
+    transform: translateX(-0.05rem);
+  }
+  75% {
+    transform: translateX(0.025rem);
+  }
+  100% {
+    transform: none;
+  }
 }
-
