--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,13 @@
   }
 }
 
+.no-scroll::-webkit-scrollbar {
+  display: none;
+}
+.no-scroll{
+  scrollbar-width: none;
+}
+
 /* width */
 ::-webkit-scrollbar { 
   width: 10px; 
@@ -161,7 +168,7 @@ input:-webkit-autofill:active {
 }
 .btn-flashing-animation {
   animation: light 1s;
-  -webkit-animation: light 1s;
+  -webkit-animation: light .2s;
 }
 
 .lablel-flashing-animation {
@@ -225,7 +232,9 @@ input:-webkit-autofill:active {
 .lablel-flashing-animation {
   animation: light 1s;
   -webkit-animation: light 1s;
-  animation-delay: 3s;
+  animation-delay: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function:ease-in-out;
 }
 
 .lablel-flashing-animation-hov {
