--- a/app/globals.css
+++ b/app/globals.css
@@ -579,3 +579,42 @@ input:checked ~ .switch__Label--Night {
     transform: none;
   }
 }
+
+.slider-bg {
+  background-attachment: fixed;
+  background-repeat: repeat;
+  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-animation: zoomin 10s ease-in infinite;
+  animation: zoomin 20s ease-in infinite;
+  transition: all .5s ease-in-out;
+  transform: scale(1.1);
+}
+
+/* Zoom in Keyframes */
+@-webkit-keyframes zoomin {
+  0% {transform: scale(1.1);}
+  50% {transform: scale(1.3);}
+  100% {transform: scale(1.1);}
+}
+@keyframes zoomin {
+  0% {transform: scale(1.1);}
+  50% {transform: scale(1.3);}
+  100% {transform: scale(1.1);}
+} /*End of Zoom in Keyframes */
+
+
+/* Zoom out Keyframes */
+@-webkit-keyframes zoomout {
+  0% {transform: scale(1.1);}
+  50% {transform: scale(1);}
+  100% {transform: scale(1.1);}
+}
+@keyframes zoomout {
+    0% {transform: scale(1.1);}
+  50% {transform: scale(1);}
+  100% {transform: scale(1.1);}
+}/*End of Zoom out Keyframes */
+
