--- a/app/globals.css
+++ b/app/globals.css
@@ -589,32 +589,54 @@ input:checked ~ .switch__Label--Night {
   -ms-user-select: none;
   -webkit-animation: zoomin 10s ease-in infinite;
   animation: zoomin 20s ease-in infinite;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
   transform: scale(1.1);
 }
 
 /* Zoom in Keyframes */
 @-webkit-keyframes zoomin {
-  0% {transform: scale(1.1);}
-  50% {transform: scale(1.3);}
-  100% {transform: scale(1.1);}
+  0% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1.1);
+  }
 }
 @keyframes zoomin {
-  0% {transform: scale(1.1);}
-  50% {transform: scale(1.3);}
-  100% {transform: scale(1.1);}
+  0% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1.1);
+  }
 } /*End of Zoom in Keyframes */
-
 
 /* Zoom out Keyframes */
 @-webkit-keyframes zoomout {
-  0% {transform: scale(1.1);}
-  50% {transform: scale(1);}
-  100% {transform: scale(1.1);}
+  0% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
 }
 @keyframes zoomout {
-    0% {transform: scale(1.1);}
-  50% {transform: scale(1);}
-  100% {transform: scale(1.1);}
-}/*End of Zoom out Keyframes */
-
+  0% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
+} /*End of Zoom out Keyframes */
