--- a/app/globals.css
+++ b/app/globals.css
@@ -661,3 +661,71 @@ input:checked ~ .switch__Label--Night {
 .canada-bg-hover:hover {
   background-image: url('../public/images/about/canada-hover.png');
 }
+
+.image-swiper-button-next {
+  background: #000;
+}
+
+.swiper-button-next, .swiper-button-prev {
+  box-sizing: content-box;
+  display: block;
+  padding: 10px 20px;
+  border-radius: 100%;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  filter: drop-shadow(14px 6px 41.4px rgba(0, 0, 0, 0.20));
+}
+
+
+.swiper-button-next:after, .swiper-button-prev:after {
+  content: none;
+}
+
+
+.swiper-button-next::after {
+  content:url("/svg/arrow-right.svg") !important;
+}
+
+.swiper-button-prev::after {
+  content:url("/svg/arrow-left.svg") !important;
+}
+
+.swiper-pagination {
+  display: flex;
+  align-items: center;
+  height: 40px;
+  justify-self: center !important;
+  background-color: #fff;
+  width: auto !important;
+  @apply mb-3 ml-[35%] lg:ml-[40%] xl:ml-[43%];
+  border-radius: 10px;
+  padding: 10px 20px;
+}
+
+.swiper {
+  border-radius: 20px;
+  display: flex !important; 
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #111 !important;
+}
+
+
+.swiper-slide {
+  position: relative;
+}
+
+.swiper-slide::after {
+  content:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.53) -19.83%, rgba(0, 0, 0, 0.00) 60.92%);
+}
